--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -108,6 +108,14 @@
   padding-left: var(--space-lg);
 }
 
+.hp-field {
+  position: absolute;
+  left: -10000px;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
+
 .form-label {
   display: block;
   margin-bottom: var(--space-xs);
